# with-agents

./: .gitignore  README.md  config.example.yaml  docker-compose.yml  run.sh
backend/: Dockerfile  README.md  pyproject.toml
backend/src/multichat/: config.py  main.py
backend/src/multichat/core/: auth.py  errors.py  events.py  mention_parser.py  models.py  rate_limit.py  sse.py  task_manager.py
backend/src/multichat/llm/: __init__.py  agent_runner.py  chat_models.py  deep_agents.py  summarization.py  token_counter.py  tools.py
backend/src/multichat/routes/: __init__.py  agents.py  ask.py  auth.py  auth_context.py  cancel.py  decide.py  history.py  mcp.py  profiles.py  retry_reply.py  retry_think.py  select_reply.py  sessions.py  skills.py  static_spa.py  stream.py
backend/src/multichat/skills/: backend-api-reference.md
backend/src/multichat/storage/: __init__.py  base.py  minio_store.py  mongo.py  object_store.py
backend/src/multichat_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: __init__.py  test_agents_api.py  test_config.py  test_deep_agents.py  test_e2e_flow.py  test_errors.py  test_mention_parser.py  test_model_discovery_api.py  test_profiles_api.py  test_rate_limit.py  test_routes.py  test_smoke.py  test_storage.py  test_task_manager.py  test_tools.py
doc/: 工作记录 - 2026 年 0521 第三份.md  工作记录 - 2026 年 0521 第二份.md  工作记录 - 2026 年 0521 第四份.md  工作记录 - 2026 年 0521.md  工作记录 - 2026 年 0522.md
scripts/: check_env.sh  verify_compact_route.py  verify_local_api_skill_support.py  verify_max_input_tokens.py  verify_multi_agent_flow.py  (+5 more)
(+65 files in other folders)
