[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "multichat-backend"
version = "0.1.0"
description = "多模型协同对话后端 think-then-choose 模式 FastAPI + deepagents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "multi-chat team" }]

dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "pydantic>=2.13,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "pyyaml>=6.0,<7.0",
    "motor>=3.7,<4.0",
    "deepagents>=0.6.3,<0.7",
    "langchain>=1.3.1,<2.0",
    "langchain-core>=1.4,<2.0",
    "langchain-openai>=1.2,<2.0",
    "langgraph>=1.2,<2.0",
    "openai>=2.0,<3.0",
    "httpx>=0.28,<1.0",
    "aiofiles>=24.0,<25.0",
    "structlog>=24.4,<25.0",
    "sse-starlette>=2.1,<3.0",
    "tenacity>=9.0,<10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "mongomock-motor>=0.0.34,<1.0",
    "ruff>=0.7,<1.0",
    "mypy>=1.13,<2.0",
    "httpx>=0.28,<1.0",
]

[tool.setuptools]
package-dir = { "" = "src" }
packages = [
    "multichat",
    "multichat.core",
    "multichat.llm",
    "multichat.storage",
    "multichat.routes",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
